# email_pip

./: README.md
mailservice/: .gitignore  README.md  pyproject.toml
mailservice/src/mailservice/: MailService.py  __init__.py  definations.py
mailservice/src/mailservice/Services/: mailchimp.py  sendgrid.py
